--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,12 @@
 .dropdown-toggle-active:hover {
     color: #0000ff !important;
 }
+
+.dropdown-menu {
+    left: -75% !important;
+  }
+
+.drop-menu{
+    color: #808080 !important;
+}
+  
