--- a/app/globals.css
+++ b/app/globals.css
@@ -3,33 +3,47 @@
 @tailwind utilities;
 
 /* Navbar */
-.dropdown-toggle{
-    background-color: white !important;
-    color: #808080 !important;
-    border: none !important;
-    transition: color 300ms !important;
-    padding: 0rem .3rem !important;
-    border-radius: 0 !important;
+.dropdown {
+  width: 100% !important;
+  display: grid !important;
+  grid-template-columns: auto 1fr !important;
+  grid-row-gap: 3px;
 }
 
-.dropdown-toggle-active{
-    border-bottom: 2px solid #0000ff !important;
-    color: #0000ff !important;
+.dropdown-toggle {
+  background-color: white !important;
+  color: #808080 !important;
+  border: none !important;
+  transition: color 300ms !important;
+  padding: 0rem 0.3rem !important;
+  border-radius: 0 !important;
+  text-align: start !important;
+}
+
+.dropdown-toggle-active {
+  border-bottom: 2px solid #0000ff !important;
+  color: #0000ff !important;
 }
 
 .dropdown-toggle:hover {
-    color: #000000 !important;
+  color: #000000 !important;
 }
 
 .dropdown-toggle-active:hover {
-    color: #0000ff !important;
+  color: #0000ff !important;
+}
+
+.dropdown-menu-mobile {
+  position: static !important;
+  transform: translate(-1px, 0px) !important;
+  width: 100% !important;
+  grid-column: span 2 !important;
 }
 
 .dropdown-menu {
-    left: -82% !important;
-  }
-
-.drop-menu{
-    color: #808080 !important;
+  left: -82% !important;
 }
-  
+
+.drop-menu {
+  color: #808080 !important;
+}
